[gd_scene load_steps=10 format=3 uid="uid://cwc4jtruxklvd"]

[ext_resource type="Script" uid="uid://c0bdw3hpgaip8" path="res://UI/artifact_button.gd" id="1_26amm"]
[ext_resource type="StyleBox" uid="uid://bgm8gjw8210j0" path="res://UI/Blue Panel.tres" id="2_wugxr"]
[ext_resource type="Theme" uid="uid://d0dwdlayg7sfd" path="res://UI/Gold Panel.tres" id="3_pnnbs"]
[ext_resource type="Theme" uid="uid://bbbii7whnfq7m" path="res://UI/White Panel.tres" id="4_2eaxb"]
[ext_resource type="Texture2D" uid="uid://dc6q4jars2lj7" path="res://UI/Circlet Icon.png" id="5_26amm"]
[ext_resource type="Theme" uid="uid://dbpnpas2onmlg" path="res://UI/font theme.tres" id="6_ndwrt"]
[ext_resource type="FontFile" uid="uid://vyr8kiirh8lc" path="res://UI/zh-cn.ttf" id="7_bhqnu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_26amm"]
bg_color = Color(0.054902, 0.12549, 0.141176, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="FontVariation" id="FontVariation_6tb11"]
base_font = ExtResource("7_bhqnu")
spacing_glyph = 5

[node name="ArtifactButton" type="TextureButton"]
custom_minimum_size = Vector2(380, 230)
anchors_preset = -1
anchor_right = 0.148
anchor_bottom = 0.16
offset_right = 0.119995
offset_bottom = -1.40001
script = ExtResource("1_26amm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_wugxr")

[node name="RollGoldPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 134.0
offset_top = 46.0
offset_right = 252.0
offset_bottom = 85.0
scale = Vector2(2, 2)
theme = ExtResource("3_pnnbs")

[node name="RollWhitePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 161.0
offset_top = 84.0
offset_right = 262.0
offset_bottom = 99.0
scale = Vector2(2, 2)
theme = ExtResource("4_2eaxb")

[node name="DamageGoldPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 139.0
offset_right = 245.0
offset_bottom = 178.0
scale = Vector2(2, 2)
theme = ExtResource("3_pnnbs")

[node name="DamageWhitePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 143.0
offset_top = 178.0
offset_right = 252.0
offset_bottom = 193.0
scale = Vector2(2, 2)
theme = ExtResource("4_2eaxb")

[node name="SquareIcon2" type="Sprite2D" parent="."]
position = Vector2(102, 129)
scale = Vector2(1.1, 1.1)
texture = ExtResource("5_26amm")

[node name="StatLabel" type="Label" parent="."]
layout_mode = 0
offset_top = -9.0
offset_right = 758.0
offset_bottom = 90.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("6_ndwrt")
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 50
text = "Flower of Life"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArtifactIcon" type="Sprite2D" parent="."]
position = Vector2(102.5, 127.5)
scale = Vector2(0.769531, 0.769531)

[node name="Stat1Value" type="Label" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 84.0
offset_right = 531.0
offset_bottom = 146.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("6_ndwrt")
theme_override_constants/outline_size = 18
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stat2Value" type="Label" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 178.0
offset_right = 525.0
offset_bottom = 240.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("6_ndwrt")
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stat1Name" type="Label" parent="."]
layout_mode = 0
offset_left = 164.0
offset_top = 47.0
offset_right = 952.0
offset_bottom = 194.0
scale = Vector2(0.25, 0.25)
theme = ExtResource("6_ndwrt")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 45
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stat2Name" type="Label" parent="."]
layout_mode = 0
offset_left = 164.0
offset_top = 141.0
offset_right = 952.0
offset_bottom = 288.0
scale = Vector2(0.25, 0.25)
theme = ExtResource("6_ndwrt")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 45
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="RollWhitePanel2" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 9.0
offset_top = 27.0
offset_right = 192.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme = ExtResource("4_2eaxb")
theme_override_styles/panel = SubResource("StyleBoxFlat_26amm")

[node name="SetNameLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 12.5
offset_right = 758.0
offset_bottom = 111.5
scale = Vector2(0.5, 0.5)
theme = ExtResource("6_ndwrt")
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("FontVariation_6tb11")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
